--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pixels-test"
+name = "powpowder"
 version = "0.1.0"
 authors = ["teevik <teemu.vikoren@gmail.com>"]
 edition = "2018"
