--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pixels = "0.0.2"
+env_logger = "0.7"
+log = "0.4"
+imgui = "0.4"
+imgui-wgpu = "0.9"
+imgui-winit-support = { version = "0.4", default-features = false, features = ["winit-22"] }
+pixels = "0.2.0"
 winit_input_helper = "0.6.0"
 winit = "0.22.0"
 rand = "0.7.3"
